# mercury

./: .gitignore  Cargo.toml  README.md
crates/asm/: Cargo.toml
crates/asm/src/: ast.rs  lib.rs  parser.rs  raise.rs
crates/binary/: AGENTS.md  Cargo.toml
crates/binary/src/: decode.rs  encode.rs  functions.rs  header.rs  lib.rs  module.rs  parse.rs  sections.rs  tables.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: box2d_roundtrip.rs
crates/disasm/: Cargo.toml
crates/disasm/src/: lib.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs  lower.rs  raw.rs  semantic.rs
crates/spec/: Cargo.toml
crates/spec-builtin/: Cargo.toml  build.rs
crates/spec-builtin/src/: lib.rs
crates/spec-extract/: Cargo.toml
crates/spec-extract/src/: extract.rs  hermes_dec.rs  hermes_source.rs  lib.rs
crates/spec-extract/tests/: generated_json_validation.rs  hbc96_container_validation.rs
crates/spec/src/: lib.rs
test/: box2d.hbc  hex.hbc
