[workspace]
members = [
    "crates/asm",
    "crates/binary",
    "crates/cli",
    "crates/disasm",
    "crates/ir",
    "crates/spec",
    "crates/spec-builtin",
    "crates/spec-extract",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Andrew"]
repository = "https://github.com/example/mercury"

[workspace.dependencies]
anyhow = "1.0"
camino = "1.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
thiserror = "2.0"
