[package]
name = "mercury-asm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
mercury-binary = { path = "../binary" }
mercury-ir = { path = "../ir" }
mercury-spec = { path = "../spec" }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
mercury-spec-builtin = { path = "../spec-builtin" }
