[package]
name = "mercury-binary"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
mercury-ir = { path = "../ir" }
mercury-spec = { path = "../spec" }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
