[package]
name = "mercury-binary"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
mercury-ir = { path = "../ir" }
mercury-spec = { path = "../spec" }
sha1.workspace = true
thiserror.workspace = true

[dev-dependencies]
mercury-spec-builtin = { path = "../spec-builtin" }
serde_json.workspace = true
