[package]
name = "mercury-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
mercury-asm = { path = "../asm" }
mercury-binary = { path = "../binary" }
mercury-ir = { path = "../ir" }
mercury-spec = { path = "../spec" }
mercury-spec-builtin = { path = "../spec-builtin" }
mercury-spec-extract = { path = "../spec-extract" }
