[package]
name = "mercury-spec-builtin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
mercury-spec = { path = "../spec" }
serde_json.workspace = true

[build-dependencies]
anyhow.workspace = true
